[tool.poetry]
name = "npl-prjt"
version = "0.1.0"
description = ""
authors = ["Al-khali <aourik.khalid@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.3.1"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0.tar.gz" }
fastapi = "^0.78.0"
uvicorn = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
